--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,9 @@
+
+
+
+/*767*/
+
+
 @import url(font-awesome.min.css);
 @import url("https://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600");
 /*
